--- a/src/app/avaliation/dobras/faulkner4/faulkner4.component.html
+++ b/src/app/avaliation/dobras/faulkner4/faulkner4.component.html
@@ -1,10 +1,10 @@
 <div class="container">
     <app-header-name></app-header-name>
     <div class="section">
-        <h1 class="h1-title" i18n>Faulkner - 4 Dobras</h1> 
+        <h1 class="h1-title" i18n>Faulkner - 4 Dobras</h1>
         <form #f="ngForm" (submit)="save(f.value)" autocomplete="off">
-            <input type="hidden"  name="altura" #altura="ngModel" [(ngModel)]="newEvaluation.altura">
-            <input type="hidden"  name="peso" #peso="ngModel" [(ngModel)]="newEvaluation.peso">
+            <input type="hidden" name="altura" #altura="ngModel" [(ngModel)]="newEvaluation.altura">
+            <input type="hidden" name="peso" #peso="ngModel" [(ngModel)]="newEvaluation.peso">
             <input type="hidden" name="punho" #punho="ngModel" [(ngModel)]="newEvaluation.punho">
             <input type="hidden" name="joelho" #joelho="ngModel" [(ngModel)]="newEvaluation.joelho">
             <table class="section-table">
@@ -22,15 +22,26 @@
                             </button>
                         </th>
                         <th class="th-top" *ngIf="addEval">
-                            <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date" class="data-input">
+                            <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date"
+                                class="data-input">
                         </th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
                         <th i18n><span (click)="openHelpDialog('Triciptal')">Triciptal</span></th>
-                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].triciptal | number: '': locale}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].triciptal | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval && editPointer!=1">
+                            {{evaluation[pointer-1].triciptal | number: '': locale}}</td>
+                        <td *ngIf="editPointer==1 && editAv">
+                            <input name="triciptal" #triciptal="ngModel" [(ngModel)]="newEvaluation.triciptal"
+                                type="number" (focus)="$event.target.select()">
+                        </td>
+                        <td *ngIf="pointer>=0 && editPointer!=0">{{evaluation[pointer].triciptal | number: '': locale}}
+                        </td>
+                        <td *ngIf="editPointer==0 && editAv">
+                            <input name="triciptal" #triciptal="ngModel" [(ngModel)]="newEvaluation.triciptal"
+                                type="number" (focus)="$event.target.select()">
+                        </td>
                         <td *ngIf="addEval">
                             <input name="triciptal" #triciptal="ngModel" [(ngModel)]="newEvaluation.triciptal"
                                 type="number">
@@ -38,8 +49,18 @@
                     </tr>
                     <tr>
                         <th i18n><span (click)="openHelpDialog('Subescapular')">Subescapular</span></th>
-                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].subescapular | number: '': locale}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].subescapular | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval && editPointer!=1">
+                            {{evaluation[pointer-1].subescapular | number: '': locale}}</td>
+                        <td *ngIf="editPointer==1 && editAv">
+                            <input name="subescapular" #subescapular="ngModel" [(ngModel)]="newEvaluation.subescapular"
+                                type="number" (focus)="$event.target.select()">
+                        </td>
+                        <td *ngIf="pointer>=0 && editPointer!=0">
+                            {{evaluation[pointer].subescapular | number: '': locale}}</td>
+                        <td *ngIf="editPointer==0 && editAv">
+                            <input name="subescapular" #subescapular="ngModel" [(ngModel)]="newEvaluation.subescapular"
+                                type="number" (focus)="$event.target.select()">
+                        </td>
                         <td *ngIf="addEval">
                             <input name="subescapular" #subescapular="ngModel" [(ngModel)]="newEvaluation.subescapular"
                                 type="number">
@@ -47,24 +68,66 @@
                     </tr>
                     <tr>
                         <th i18n><span (click)="openHelpDialog('Suprailíaca')">Suprailíaca</span></th>
-                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].suprailiaca | number: '': locale}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].suprailiaca | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval && editPointer!=1">
+                            {{evaluation[pointer-1].suprailiaca | number: '': locale}}</td>
+                        <td *ngIf="editPointer==1 && editAv">
+                            <input name="suprailiaca" #suprailiaca="ngModel" [(ngModel)]="newEvaluation.suprailiaca"
+                                type="number" (focus)="$event.target.select()">
+                        </td>
+                        <td *ngIf="pointer>=0 && editPointer!=0">
+                            {{evaluation[pointer].suprailiaca | number: '': locale}}</td>
+                        <td *ngIf="editPointer==0 && editAv">
+                            <input name="suprailiaca" #suprailiaca="ngModel" [(ngModel)]="newEvaluation.suprailiaca"
+                                type="number" (focus)="$event.target.select()">
+                        </td>
                         <td *ngIf="addEval">
-                            <input name="suprailiaca" #suprailiaca="ngModel" [(ngModel)]="newEvaluation.suprailiaca" type="number">
+                            <input name="suprailiaca" #suprailiaca="ngModel" [(ngModel)]="newEvaluation.suprailiaca"
+                                type="number">
                         </td>
                     </tr>
                     <tr>
                         <th i18n><span (click)="openHelpDialog('Abdominal')">Abdominal</span></th>
-                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].abdominal | number: '': locale}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].abdominal | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval && editPointer!=1">
+                            {{evaluation[pointer-1].abdominal | number: '': locale}}</td>
+                        <td *ngIf="editPointer==1 && editAv">
+                            <input name="abdominal" #abdominal="ngModel" [(ngModel)]="newEvaluation.abdominal"
+                                type="number" (focus)="$event.target.select()">
+                        </td>
+                        <td *ngIf="pointer>=0 && editPointer!=0">{{evaluation[pointer].abdominal | number: '': locale}}
+                        </td>
+                        <td *ngIf="editPointer==0 && editAv">
+                            <input name="abdominal" #abdominal="ngModel" [(ngModel)]="newEvaluation.abdominal"
+                                type="number" (focus)="$event.target.select()">
+                        </td>
                         <td *ngIf="addEval">
-                            <input name="abdominal" #abdominal="ngModel" [(ngModel)]="newEvaluation.abdominal" type="number">
+                            <input name="abdominal" #abdominal="ngModel" [(ngModel)]="newEvaluation.abdominal"
+                                type="number">
                         </td>
                     </tr>
                     <tr *ngIf="sex == 'M'">
                         <th i18n><span (click)="openHelpDialog('Tipo aluno')">Tipo aluno</span></th>
-                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].tipoaluno}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].tipoaluno}}</td>
+                        <td *ngIf="pointer>=1 && !addEval && editPointer!=1">{{evaluation[pointer-1].tipoaluno}}</td>
+                        <td *ngIf="editPointer==1 && editAv">
+                            <mat-form-field>
+                                <mat-label>Tipo Aluno</mat-label>
+                                <mat-select name="tipoaluno" #tipoaluno="ngModel" [(ngModel)]="newEvaluation.tipoaluno">
+                                    <mat-option value="Nadadores">Nadadores</mat-option>
+                                    <mat-option value="Futebolistas">Futebolistas</mat-option>
+                                    <mat-option value="Outros esportes">Outros esportes</mat-option>
+                                </mat-select>
+                            </mat-form-field>
+                        </td>
+                        <td *ngIf="pointer>=0 && editPointer!=0">{{evaluation[pointer].tipoaluno}}</td>
+                        <td *ngIf="editPointer==0 && editAv">
+                            <mat-form-field>
+                                <mat-label>Tipo Aluno</mat-label>
+                                <mat-select name="tipoaluno" #tipoaluno="ngModel" [(ngModel)]="newEvaluation.tipoaluno">
+                                    <mat-option value="Nadadores">Nadadores</mat-option>
+                                    <mat-option value="Futebolistas">Futebolistas</mat-option>
+                                    <mat-option value="Outros esportes">Outros esportes</mat-option>
+                                </mat-select>
+                            </mat-form-field>
+                        </td>
                         <td *ngIf="addEval">
                             <mat-form-field>
                                 <mat-label>Tipo Aluno</mat-label>
@@ -106,18 +169,32 @@
                             <small class="advise-sm" i18n>* Todas as medidas são em milimetros</small>
                         </td>
                     </tr>
+                    <tr>
+                        <th>Ações</th>
+                        <td *ngIf="pointer>=1 && !addEval">
+                            <app-edit-del-form *ngIf="(editPointer==1 && editAv) || !editAv"
+                                [dataAv]="evaluation[pointer-1].data"
+                                (action)="executeAction($event, evaluation[pointer-1], 1)"></app-edit-del-form>
+                        </td>
+                        <td *ngIf="pointer>=0 && !addEval">
+                            <app-edit-del-form *ngIf="(editPointer==0 && editAv) || !editAv"
+                                [dataAv]="evaluation[pointer].data"
+                                (action)="executeAction($event, evaluation[pointer], 0)"></app-edit-del-form>
+                        </td>
+                        <td *ngIf="addEval">&nbsp;</td>
+                    </tr>
                 </tbody>
             </table>
 
             <div class="action">
-                <button type="button" *ngIf="!addEval" [disabled]="pointer<=1" mat-mini-fab color="default"
+                <button type="button" *ngIf="!addEval" [disabled]="pointer<=1 || editAv" mat-mini-fab color="default"
                     (click)="pointer=pointer-1">
                     <mat-icon class="mat-14">chevron_left</mat-icon>
                 </button>
-                <button type="button" *ngIf="!addEval" mat-stroked-button (click)="addEvaluation()">
+                <button type="button" *ngIf="!addEval" mat-stroked-button [disabled]="editAv" (click)="addEvaluation()">
                     <mat-icon class="mat-18">add</mat-icon>
                 </button>
-                <button type="button" *ngIf="!addEval" [disabled]="pointer == maxPointer-1 || pointer == -1"
+                <button type="button" *ngIf="!addEval" [disabled]="pointer == maxPointer-1 || pointer == -1 || editAv"
                     mat-mini-fab color="default" (click)="pointer=pointer+1">
                     <mat-icon class="mat-14">chevron_right</mat-icon>
                 </button>
